--- a/js/env.js.example
+++ b/js/env.js.example
@@ -2,7 +2,7 @@ var module = angular.module("lkticket.admin");
 
 module.constant("ENV", {
 	"CORE" : {
-		"BASE_URL" : "https://lkticket.silvertejp.nu/api",
+		"BASE_URL" : "https://api-dev.lkticket.net",
 	// "BASE_URL" : "http://127.0.0.1:8080",
 	}
 });
